--- a/src/static/sass/_reset.scss
+++ b/src/static/sass/_reset.scss
@@ -171,7 +171,7 @@ button {
 }
 
 body {
-	min-width: 320px;
+	font-family: "Apple SD Gothic Neo","맑은 고딕","Malgun Gothic",sans-serif;
 	text-size-adjust: none;
 	user-select: none;
 	-webkit-overflow-scrolling: touch;
@@ -201,4 +201,16 @@ input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
 	display: none;
+}
+
+#app {
+	min-width: 320px;
+	max-width: 720px;
+	margin: 0 auto;
+}
+
+html,
+body {
+	height: 100%;
+	background-color: rgba(0,0,0,0.018);
 }
